--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   },
   "devDependencies": {
     "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.7"
+    "sass-loader": "^6.0.7",
+    "winston": "^2.4.1"
   }
 }
